<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ScreeningFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="144dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_above="@id/button_start_screening"
        android:text="@string/screening"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button_start_screening"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="400dp"
        android:layout_height="120dp"
        android:layout_centerInParent="true"
        android:text="@string/start_screening"
        android:textSize="32sp" />

    <Button
        android:id="@+id/button_show_results"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="400dp"
        android:layout_height="120dp"
        android:layout_below="@+id/button_start_screening"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="24dp"
        android:layout_centerHorizontal="true"
        android:text="@string/show_results"
        android:textSize="32sp" />


</RelativeLayout>