<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Question1Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <LinearLayout
            style="@style/QuestionBlock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView_q_2"
                style="@style/QuestionLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/take_a_survey" />

            <RadioGroup
                android:id="@+id/radioGroup_q_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/radioButton_201-1"
                    style="@style/MyMaterialTheme.ButtonRounded"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/yes" />

                <RadioButton
                    android:id="@+id/radioButton_201-2"
                    style="@style/MyMaterialTheme.ButtonRounded"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/no" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            style="@style/QuestionBlock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView_debug"
                style="@style/QuestionLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="" />

            <Button
                android:id="@+id/button_next"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/next" />

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>