<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.QuotaFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="32dp"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:paddingTop="32dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/your_quotas"
            android:textSize="32sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="24dp"
            android:background="@color/id" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"
            android:textSize="24sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp">

            <ProgressBar
                android:id="@+id/progressBar_female"
                style="@style/MyMaterialTheme.ProgressBarRounded"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="10"
                android:maxHeight="56dp"
                android:minHeight="48dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:progress="5"
                android:secondaryProgress="6"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="#00000000"
                android:text="\?? / 10"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="#FFFFFF"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:textSize="24sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="\?? / 10"
                android:textSize="24sp" />
        </LinearLayout>


        <ProgressBar
            android:id="@+id/progressBar_male"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:max="10"
            android:maxHeight="56dp"
            android:minHeight="48dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:progress="2" />

    </LinearLayout>

</RelativeLayout>